bzr-svn 0.4.1	UNRELEASED

  BUG FIXES

   * Convert errors to bzr errors when fetching data (avoids backtraces).

bzr-svn 0.4.0	2007-08-04	
  
  BUG FIXES

   * Non-ascii characters in file ids are now supported (fixes imports 
     of the Python repository).

   * Fixed error raised during version incompatibility. (Wouter van Heyst, 
                                                         #80467)

   * Implemented Repository.get_revision_graph(None)

   * svn-import will no longer spin using CPU if the target directory 
     did not exist (#80223).

   * Remove branches when they are being replaced. Fixes DivergedBranches 
     error when using svn-import (#81908).
 
   * Consistently treat property changes as actual changes (#122115)

   * Be a bit less verbose when trying to connect (#124858)

   * Fix locking issues (#125212)

   * Warn when used with experimental version of mappings. (#117198)

   * Only warn about out of date mappings, bzr-svn version or 
     experimental mappings when the plugin is being used. (#93319)

   * Clearer warning when branch specified to svn-import. (#121391)

   * Support pushing multiple revisions in a row. (#115494)

   * Fix compatibility with Subversion 1.5. (#73918)

   * Fix import of svk:merge properties (need to be sorted lexicographically).

   * Support possible_transports argument to BzrDir.sprout(). (#128500)

   * Fix incorrect delete when a child of a renamed directory is removed.

   * Support pushing adding empty files. (#113667)

  BEHAVIOUR CHANGES

   * Use shared repositories by default in svn-import command.

   * Avoid muttering when possible.

  TESTS

   * Add blackbox test for svn-import with dumpfile. (#123493)

  PERFORMANCE

   * do_update() is now used to find the contents of a directory recursively. 
     This should reduce the number of roundtrips significantly when 
	 finding file id mappings.

   * Support read locking for Branch.

  FEATURES
   
   * add -v option to svn-upgrade
