@@ -4,6 +4,9 @@ bzr-svn 0.4.1	UNRELEASED
 
    * Convert errors to bzr errors when fetching data (avoids backtraces).
 
+   * Support initializing Subversion repositories. 
+     `bzr init-repo --format=subversion` now works.
+
 bzr-svn 0.4.0	2007-08-04	
   
   BUG FIXES
